--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Vite React App</title>
+    <title>HyperTube - Movie Streaming Platform</title>
+    <meta name="description" content="Stream your favorite movies with HyperTube" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div id="root"></div>
